# enrolhq-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: 01_getting_started.py  02_search_and_filter.py  03_create_application.py  04_update_application.py  05_upload_documents.py  06_download_documents.py  07_bulk_operations.py  08_pagination.py  09_events_and_bookings.py  10_export_to_csv.py  11_cms_settings.py  12_metafields.py  13_audit_log.py  14_activity_log.py  GUIDE.md
src/enrolhq/: __init__.py  auth.py  client.py  constants.py  exceptions.py  http.py  pagination.py
src/enrolhq/resources/: __init__.py  activity_log.py  analytics.py  applications.py  audit_log.py  base.py  cms_settings.py  documents.py  email_log.py  event_bookings.py  events.py  metafields.py  notes.py  payments.py  reference_data.py  staff.py
tests/: conftest.py  test_integration.py  test_unit.py
