[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enrolhq"
dynamic = ["version"]
description = "Python SDK for the EnrolHQ API"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = ["requests>=2.20"]

[project.optional-dependencies]
dev = ["pytest", "responses"]

[tool.setuptools.dynamic]
version = {attr = "enrolhq._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
